Misc improvements and deps update (#36)